--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 
 *{
     font-family: Roboto;
+   /*  border:solid red; /*for debugging*/
 }
 
 .header {
@@ -14,7 +15,7 @@
     flex-direction:row;
     justify-content: space-around;
     align-items: center;
-}
+}/* border:solid red; /*for debugging*/
 
 .header-logo {
    /* border:solid blue; /*for debugging*/
@@ -39,10 +40,16 @@
     border: solid red;
     background-color: #1f2937;
     display: flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items: flex-start;
+    justify-content:space-around;
+    align-items: center;
   
+ }
+
+ .hero-text-box {
+   border: solid green;
+   display: flex;
+  flex-direction: column;
+   align-items: center;
  }
 
  .hero-title {
@@ -69,19 +76,18 @@
  }
 
  .hero-image {
-    border: solid;
+   /* border: solid;*/
     color: #fff; 
     background-color: gray;
-    width: 300px;
+    width: 400px;
     height: 150px;
-    align-self: flex-end;
-    align-items: center;
+/*    align-self: flex-end;
+    align-items: center;*/
     display: flex;
     justify-content: center;
     align-items: center;
-
  }
 
- 
+
 
 
