--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,31 @@
     align-items: center;
  }
 
+.gallery {
+ /**  border: red solid;*/
+}
 
+.gallery-title {
+/*   border: solid red;*/
+   display: flex;
+   justify-content: center;
+   font-size: 36px;
+   font-weight: bolder;
+   color: #1f2937;
+   margin: 50px;
+}
 
+.gallery-item {
+ /*  border: solid;*/
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+}
 
+.gallery-item-1, .gallery-item-2, .gallery-item-3, 
+.gallery-item-4 {
+   border: solid #3882f6;
+   border-radius: 20px;
+   width: 150px;
+   height: 150px;
+}
