--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@
  }
 
 .gallery {
- /**  border: red solid;*/
+ /* border: red solid;*/
 }
 
 .gallery-title {
@@ -124,4 +124,19 @@
    border-radius: 20px;
    width: 150px;
    height: 150px;
+}
+
+.gallery-item-subtext {
+ /* border: red solid;*/
+   display: flex;
+   justify-content: space-around;
+ 
+}
+
+.gallery-subtext {
+  color: gray;
+   font-size: 16px;
+   width: 150px;
+   height: 150px;
+
 }
