Add quote, quote-box, and sub-quote rule-sets. The rule-sets include font (color, style, siz) and alignment details.

--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,26 @@
    height: 150px;
 
 }
+
+.quote-box {
+
+   height: 300px;
+   background-color:#e5e7eb ;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   padding: 100px;
+}
+
+.quote {
+ 
+   font-size: 39px;
+   font-style: italic;
+   color: #1f2937;
+}
+
+.sub-quote{
+   align-self: flex-end;
+   
+}
