--- a/styles.css
+++ b/styles.css
@@ -163,3 +163,46 @@
    align-self: flex-end;
    
 }
+
+.call-box {
+
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 225px;
+
+}
+
+.call-box-blue {
+
+   border-radius: 10px;
+   padding: 15px;
+   background-color: #3882f6;
+   width: 600px;
+   display: flex;
+   justify-content: space-around;
+   
+}
+
+.call-to-action {
+  /* border: red solid;*/
+}
+
+.call-text {
+   color: #f9faf8;
+}
+
+.call-sub-text {
+   font-size: 12px;
+   color: #e5e7eb;
+}
+
+.call-button {
+   border: thin solid;
+   border-radius: 5px;
+   color: #f9faf8;
+   width: 100px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
